--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,11 @@ h2, h3, h4, h5 {
   padding-right: 5%;
 }
 
+.instruction {
+   padding: 0 0 0 5%;
+   margin: 0;
+}
+
 
 .date-text {
   font-style: italic;
