fixed mobile view div stacking issues

--- a/randyCon_2016/styles/main.css
+++ b/randyCon_2016/styles/main.css
@@ -19,4 +19,7 @@ body {
   display: block; }
 
 .main-container {
-  margin-top: 0.5%; }
+  margin-top: 0.35%; }
+
+.red {
+  border: 2px solid red; }
